Added SUCCESS Mail + junit result pickup
git-svn-id: https://svn.dbc.dk/repos/openagency-ws-client/trunk@111956 b87a6194-a221-0410-ad6f-3b8ec35bba13